crates/tui/tests/storybook/snapshots/app_tool::notebook_edit_tool_block.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
assertion_line: 385
expression: frame.styles_text()
---
dim: 80 16
  0   0   1 fg=AnsiValue(77)
  0   1  14 attrs=dim
  1   0   2 bg=Rgb { r: 60, g: 20, b: 20 }
  1   2   5 fg=Red bg=Rgb { r: 60, g: 20, b: 20 }
  1   7  13 fg=Rgb { r: 248, g: 248, b: 242 } bg=Rgb { r: 60, g: 20, b: 20 }
  1  20  59 bg=Rgb { r: 60, g: 20, b: 20 }
  2   0   2 bg=Rgb { r: 60, g: 20, b: 20 }
  2   2   5 fg=Red bg=Rgb { r: 60, g: 20, b: 20 }
  2   7  32 fg=Rgb { r: 248, g: 248, b: 242 } bg=Rgb { r: 60, g: 20, b: 20 }
  2  39  40 bg=Rgb { r: 60, g: 20, b: 20 }
  3   0   2 bg=Rgb { r: 20, g: 50, b: 20 }
  3   2   5 fg=Green bg=Rgb { r: 20, g: 50, b: 20 }
  3   7  19 fg=Rgb { r: 248, g: 248, b: 242 } bg=Rgb { r: 20, g: 50, b: 20 }
  3  26  53 bg=Rgb { r: 20, g: 50, b: 20 }
  4   0   2 bg=Rgb { r: 20, g: 50, b: 20 }
  4   2   5 fg=Green bg=Rgb { r: 20, g: 50, b: 20 }
  4   7  28 fg=Rgb { r: 248, g: 248, b: 242 } bg=Rgb { r: 20, g: 50, b: 20 }
  4  35  44 bg=Rgb { r: 20, g: 50, b: 20 }
 12   0   1 fg=AnsiValue(237)
 12   1   1 fg=Rgb { r: 198, g: 198, b: 198 } attrs=bold
 12   2   1 fg=Rgb { r: 175, g: 175, b: 175 } attrs=bold
 12   3   1 fg=Rgb { r: 157, g: 157, b: 157 } attrs=bold
 12   4   1 fg=Rgb { r: 144, g: 144, b: 144 } attrs=bold
 12   5   1 fg=Rgb { r: 140, g: 140, b: 140 } attrs=bold
 12   6   1 fg=Rgb { r: 144, g: 144, b: 144 } attrs=bold
 12   7   1 fg=Rgb { r: 157, g: 157, b: 157 } attrs=bold
 12   8   1 fg=Rgb { r: 175, g: 175, b: 175 } attrs=bold
 12   9   1 fg=Rgb { r: 198, g: 198, b: 198 } attrs=bold
 12  10   1 fg=Rgb { r: 220, g: 220, b: 220 } attrs=bold
 12  11   1 fg=Rgb { r: 238, g: 238, b: 238 } attrs=bold
 12  13  67 fg=AnsiValue(237)
 13   1   1 fg=Black bg=White
 14   0  80 fg=AnsiValue(237)
 15   0  10 fg=AnsiValue(244) bg=AnsiValue(234)
 15  10  62 bg=AnsiValue(233)
 15  72   8 fg=AnsiValue(244) bg=AnsiValue(233)
