crates/tui/tests/storybook/snapshots/app_tool::notebook_edit_tool_block_insert_cell.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
assertion_line: 344
expression: frame.text()
---
* edit_notebook analysis.ipynb
   1   print("new cell")






─ ✿ working… ─────────────────────────────────────────────────────────

──────────────────────────────────────────────────────────────────────
 ○ normal                                                     1:1 100%
