crates/tui/tests/storybook/snapshots/app_tool::notebook_edit_tool_block_insert_cell.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.styles_text()
---
dim: 70 12
  0   0   1 fg=AnsiValue(77)
  0   1  15 attrs=dim
  1   2   3 fg=AnsiValue(244)
  1   7   5 fg=Rgb { r: 102, g: 217, b: 239 }
  1  12   1 fg=Rgb { r: 248, g: 248, b: 242 }
  1  13  10 fg=Rgb { r: 230, g: 219, b: 116 }
  1  23   1 fg=Rgb { r: 248, g: 248, b: 242 }
  8   0   1 fg=AnsiValue(237)
  8   1   1 fg=Rgb { r: 198, g: 198, b: 198 } attrs=bold
  8   2   1 fg=Rgb { r: 175, g: 175, b: 175 } attrs=bold
  8   3   1 fg=Rgb { r: 157, g: 157, b: 157 } attrs=bold
  8   4   1 fg=Rgb { r: 144, g: 144, b: 144 } attrs=bold
  8   5   1 fg=Rgb { r: 140, g: 140, b: 140 } attrs=bold
  8   6   1 fg=Rgb { r: 144, g: 144, b: 144 } attrs=bold
  8   7   1 fg=Rgb { r: 157, g: 157, b: 157 } attrs=bold
  8   8   1 fg=Rgb { r: 175, g: 175, b: 175 } attrs=bold
  8   9   1 fg=Rgb { r: 198, g: 198, b: 198 } attrs=bold
  8  10   1 fg=Rgb { r: 220, g: 220, b: 220 } attrs=bold
  8  11   1 fg=Rgb { r: 238, g: 238, b: 238 } attrs=bold
  8  13  54 fg=AnsiValue(237)
  8  67   1 fg=AnsiValue(244)
  8  69   1 fg=AnsiValue(237)
  9   1   1 fg=Black bg=White
 10   0  70 fg=AnsiValue(237)
 11   0  70 bg=AnsiValue(233)
