crates/tui/tests/storybook/snapshots/app_tool::parallel_pending_tool_states.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
assertion_line: 464
expression: frame.text()
---
* read_file ×2
  a.rs
  b.rs





─ ✿ working… ───────────────────────────────────────────────────

────────────────────────────────────────────────────────────────
 ○ normal                                               1:1 100%
