crates/tui/tests/storybook/snapshots/app_tool::present_plan_tool_block.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.styles_text()
---
dim: 80 20
  0   0   1 fg=AnsiValue(77)
  0   1  13 attrs=dim
  1   2   4 fg=AnsiValue(244)
  1   8   6 fg=Rgb { r: 253, g: 151, b: 31 }
  2   2   4 fg=AnsiValue(244)
  2   8  22 fg=Rgb { r: 255, g: 255, b: 255 }
  3   2   4 fg=AnsiValue(244)
  4   2   4 fg=AnsiValue(244)
  4   8   3 fg=Rgb { r: 255, g: 255, b: 255 }
  4  11   4 fg=Rgb { r: 190, g: 132, b: 255 }
  5   2   4 fg=AnsiValue(244)
  5   8  30 fg=Rgb { r: 255, g: 255, b: 255 }
  6   2   4 fg=AnsiValue(244)
  6   8  11 fg=Rgb { r: 255, g: 255, b: 255 }
  7   2   4 fg=AnsiValue(244)
  7   8   1 fg=Rgb { r: 255, g: 255, b: 255 }
  8   2   4 fg=AnsiValue(244)
  8   8   3 fg=Rgb { r: 255, g: 255, b: 255 }
  9   2   4 fg=AnsiValue(244)
 10   2   4 fg=AnsiValue(244)
 10   8  14 fg=Rgb { r: 253, g: 151, b: 31 }
 11   2   4 fg=AnsiValue(244)
 11   8  17 fg=Rgb { r: 255, g: 255, b: 255 }
 16   0   1 fg=AnsiValue(237)
 16   1   1 fg=Rgb { r: 198, g: 198, b: 198 } attrs=bold
 16   2   1 fg=Rgb { r: 175, g: 175, b: 175 } attrs=bold
 16   3   1 fg=Rgb { r: 157, g: 157, b: 157 } attrs=bold
 16   4   1 fg=Rgb { r: 144, g: 144, b: 144 } attrs=bold
 16   5   1 fg=Rgb { r: 140, g: 140, b: 140 } attrs=bold
 16   6   1 fg=Rgb { r: 144, g: 144, b: 144 } attrs=bold
 16   7   1 fg=Rgb { r: 157, g: 157, b: 157 } attrs=bold
 16   8   1 fg=Rgb { r: 175, g: 175, b: 175 } attrs=bold
 16   9   1 fg=Rgb { r: 198, g: 198, b: 198 } attrs=bold
 16  10   1 fg=Rgb { r: 220, g: 220, b: 220 } attrs=bold
 16  11   1 fg=Rgb { r: 238, g: 238, b: 238 } attrs=bold
 16  13  67 fg=AnsiValue(237)
 17   1   1 fg=Black bg=White
 18   0  80 fg=AnsiValue(237)
 19   0  10 fg=AnsiValue(244) bg=AnsiValue(234)
 19  10  62 bg=AnsiValue(233)
 19  72   8 fg=AnsiValue(244) bg=AnsiValue(233)
