crates/tui/tests/storybook/snapshots/app_tool::present_plan_tool_pending_title_only.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
* present_plan Parser refactor





─ ✿ working… ───────────────────────────────────────────────────────────────────

────────────────────────────────────────────────────────────────────────────────
 ○ normal                                                               1:1 100%
