crates/tui/tests/storybook/snapshots/app_tool::present_plan_tool_states.collapsed.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: text
---
* present_plan Parser refactor                                             14:37:03

* present_plan Parser refactor                                             14:37:03















─ ✿ working… ───────────────────────────────────────────────────────────────────────

────────────────────────────────────────────────────────────────────────────────────
 ○ normal                                                                   1:1 100%
